[gd_scene load_steps=2 format=3 uid="uid://inventory_ui_scene"]

[ext_resource type="Script" path="res://ui/inventory/inventory_ui.gd" id="1_inv"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
horizontal_alignment = 1

[node name="CloseBtn" type="Button" parent="Panel/VBox/Header"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 496.0
theme_override_constants/separation = 20

[node name="EquipmentSection" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Panel/HBox/EquipmentSection"]
layout_mode = 2
text = "Equipment"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/HBox/EquipmentSection"]
layout_mode = 2

[node name="InventorySection" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBox/InventorySection"]
layout_mode = 2
text = "Items"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/HBox/InventorySection"]
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="Panel/HBox/InventorySection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 6

[node name="ItemTooltip" type="PanelContainer" parent="."]
visible = false
z_index = 10
offset_right = 200.0
offset_bottom = 150.0

[node name="VBox" type="VBoxContainer" parent="ItemTooltip"]
layout_mode = 2

[node name="ItemName" type="Label" parent="ItemTooltip/VBox"]
layout_mode = 2
text = "Item Name"

[node name="ItemType" type="Label" parent="ItemTooltip/VBox"]
layout_mode = 2
text = "Type"

[node name="HSeparator" type="HSeparator" parent="ItemTooltip/VBox"]
layout_mode = 2

[node name="ItemStats" type="Label" parent="ItemTooltip/VBox"]
layout_mode = 2
text = "Stats"

[node name="ItemDesc" type="Label" parent="ItemTooltip/VBox"]
layout_mode = 2
text = "Description"
autowrap_mode = 2
